# semantic-dictionary

./: .gitignore  README.md  ai.ipynb  model.ipynb  prediction.py  pyproject.toml  server.py  start.sh
.github/workflows/: deploy-web.yml
backend/: data_pipeline.py  main.py  requirements.txt  search.py
data/: dict.csv
frontend/: app.js  index.html  style.css
mobile/: App.tsx  README.md  app.json  metro.config.js  package-lock.json  package.json
mobile/app/: _layout.tsx  bookmarks.tsx  index.tsx
mobile/components/: EmptyState.tsx  PosBadge.tsx  SearchBar.tsx  SynonymTag.tsx  WordCard.tsx
mobile/lib/: colors.ts  loadData.ts  mockData.ts  responsive.ts  types.ts
mobile/shims/: react-dom.js
web/: next.config.ts  package-lock.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/bookmarks/: page.tsx
web/components/: EmptyState.tsx  PosBadge.tsx  SearchBar.tsx  SynonymTag.tsx  WordCard.tsx
web/lib/: loadData.ts
