[project]
name = "semantic-dictionary"
version = "0.1.0"
description = "Find the perfect word to express yourself"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "nltk",
    "rank-bm25",
    "scikit-learn",
    "numpy",
    "pandas>=2.3.3",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "packaging>=26.0",
    "ipykernel>=7.2.0",
    "polars>=1.39.3",
]
